# rp2040-can-mcp2515

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  gs_usb.h  main.c  tusb_config.h  usb_descriptors.c
.github/workflows/: build.yml
tests/: hw_test.py  stress.cpp
